# react-native-rust

./: .gitignore  README.md  app.json  index.js  package.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/rnrustmodule/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
ios/: Podfile
ios/rnrustmodule/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/rnrustmodule.xcodeproj/: project.pbxproj
ios/rnrustmodule.xcodeproj/xcshareddata/xcschemes/: rnrustmodule.xcscheme
ios/rnrustmodule.xcworkspace/: contents.xcworkspacedata
ios/rnrustmodule/Images.xcassets/ferris.imageset/: Contents.json
ios/rnrustmoduleTests/: rnrustmoduleTests.m
modules/rust-module/: package.json  react-native-rust-module.podspec
modules/rust-module/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
modules/rust-module/android/src/main/: AndroidManifest.xml
modules/rust-module/android/src/main/java/com/rustmodule/: RustModuleModule.kt  RustModulePackage.kt
modules/rust-module/cpp/: react-native-rust-module.cpp  react-native-rust-module.h
modules/rust-module/ios/: RustModule.h  RustModule.mm  RustModule.swift
modules/rust-module/rust/: Cargo.toml  build-android.sh  build-ios.sh  build.sh  cbindgen.toml
modules/rust-module/rust/examples/: qr.rs
modules/rust-module/rust/src/: lib.rs
modules/rust-module/src/: index.tsx
src/: App.tsx  README.md
